fixed the issue with why the fillRect numbers were weird and not fit the 20, 20 of width and height given. it is because the canvas tag needs the width and h as its attribute not with css. also ignore the palette component which contains example code i found and was trying to test it around to see how it was going to make it work. that code will not be in the final product. it is in here just to see how it works which rn its not even working so dont worry about it

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,9 +1,3 @@
-.canvas {
-  /* border: black 1px solid; */
-  width: 300px;
-  height: 300px;
-}
-
 .canvas-container {
   display: flex;
   justify-content: center;
